0.20200413

    Threshold: color correct mod

0.20200405

    Filter: Level norm size method

0.20200331

    Threshold: unified histogram

0.20200329

    Threshold: added 'size' method

0.20200307

    Library: double -> float

0.20200306

    Pmean: fix wbselect

0.20200220

    Threshold: normalization of the equation (k*dp + dg - d) for dith Knuth D.E.

0.20200213

    Threshold: added ditho Knuth D.E.

0.20200212

    Threshold: added dithh Knuth D.E.
    Threshold: Dalg: lower/upper bound

0.20200128

    Threshold: Gravure: Mean -> BiMod

0.20200111

    Library: split library code for splint

0.20191202

    Threshold: fixed Sauvola

0.20191023

    LibImthreshold: uncrustify

0.20191018

    RIS: FRP upscale: weight distribution

0.20191016

    LibImthreshold: fix Clamp
    RIS: add: FRP upscale

0.20191013

    RIS: add: GSample upscale

0.20190917

    Filter: add: quant

0.20190824

    LibImthreshold: extern C

0.20190722

    LibImthreshold: clean code

0.20190423

    LibImthreshold: ByteClamp

0.20190402

    Despeckle(BW): optimize

0.20190220

    DjVuL: include size reduce

0.20181201

    Optimize alloc and free

0.20181107

    Size: add: bicont method

0.20180801

    DjVuL: include refilter

0.20180618

    Math: add: sharpenbad metric diff image
    Math: add: option delta

0.20180518

    Filter: add: diff denoise method

0.20180504

    Filter: despeckle(BW): add: mag2 method

0.20180429

    Filter: add: morph filter

0.20180423

    Threshold: add: mscale

0.20180414

    Math: add: harmonic, min, max

0.20180408

    Math: average, distance, divide, geometric, minus, multiply, norm, plus, threshold

0.20180405

    Threshold: restruct threshold method (value and layer)

0.20180404

    Filter: add method BiModNorm

0.20180403

    Threshold: correct quadmod

0.20180331

    Threshold: add quadmod

0.20180325

    IMTmeanIc: fixed overflow

0.20180322

    Separate: mscale: add autolevel

0.20180320

    Threshold image: mirror of mean