@@ -87,8 +87,8 @@ BYTE IMTmin (IMTpixel**, unsigned, unsigned);
 float IMTmean (IMTpixel**, unsigned, unsigned);
 float IMTdev (IMTpixel**, float, unsigned, unsigned);
 float IMTwb (IMTpixel**, float, unsigned, unsigned);
-void IMTHist (IMTpixel**, unsigned*, unsigned, unsigned, unsigned, unsigned, unsigned);
-int IMTHistBiMod (unsigned*, unsigned, float);
+void IMTHist (IMTpixel**, unsigned long long*, unsigned, unsigned, unsigned, unsigned, unsigned);
+int IMTHistBiMod (unsigned long long*, unsigned, float);
 void IMTFilterSCCor (IMTpixel**, unsigned, unsigned);
 void IMTFilterSMirror (IMTpixel**, unsigned, unsigned);
 int IMTFilterSNorm (IMTpixel**, unsigned, unsigned);
